Refactor templates for about, contact, hello, home, and list_products + add css

--- a/appTp1/templates/appTp1/contact.html
+++ b/appTp1/templates/appTp1/contact.html
@@ -1,8 +1,4 @@
-<html>
-    <head>
-    <title>Mon app DJANGO</title>
-    </head>
-    <body>
-        <h1>Contact us</h1>
-        <a href='/appTp1/'>Home</a>
-</html>
+{% extends 'appTp1/base.html' %}
+{% block content %}
+<h1>Contact us</h1>
+{% endblock %}
