--- a/appTp1/templates/appTp1/base.html
+++ b/appTp1/templates/appTp1/base.html
@@ -1,8 +1,19 @@
+{% load static %}
 <html>
     <head>
         <title>Mon app DJANGO</title>
+        <link rel="stylesheet" href="{% static 'styles.css' %}">
     </head>
     <body>
+        <nav>
+            <ul>
+                <li><a href='/appTp1/'>Home</a></li>
+                <li><a href='/appTp1/hello/you'>Hello</a></li>
+                <li><a href='/appTp1/contact'>Contact</a></li>
+                <li><a href='/appTp1/about'>About</a></li>
+                <li><a href='/appTp1/products'>Products</a></li>
+            </ul>
+        </nav>
         {% block content %}{% endblock %}
     </body>
 </html>
