--- a/appTp1/templates/appTp1/hello.html
+++ b/appTp1/templates/appTp1/hello.html
@@ -1,9 +1,4 @@
-<html>
-    <head>
-    <title>Mon app DJANGO</title>
-    </head>
-    <body>
-        <h1>Hello {{name}}!</h1>
-        <a href='/appTp1/'>Home</a>
-    </body>
-</html>
+{% extends 'appTp1/base.html' %}
+{% block content %}
+<h1>Hello {{name}}!</h1>
+{% endblock %}
