--- a/appTp1/templates/appTp1/home.html
+++ b/appTp1/templates/appTp1/home.html
@@ -1,9 +1,4 @@
-<html>
-    <head>
-    <title>Mon app DJANGO</title>
-    </head>
-    <body>
-        <h1>Hello Django!</h1>
-        <a href='/appTp1/contact'>Contact</a> - <a href='/appTp1/about'>About</a> - <a href='/appTp1/hello/you'>Hello</a> - <a href='/appTp1/products'>Products</a>
-    </body>
-</html>
+{% extends 'appTp1/base.html' %}
+{% block content %}
+<h1>Hello Django!</h1>
+{% endblock %}
