--- a/static/styles.css
+++ b/static/styles.css
@@ -1,6 +1,3 @@
-h1{
-    color: red;
-}
 nav{
     background-color: blue;
 }
@@ -26,4 +23,7 @@ nav li{
     text-align: center;
     border: 1px solid black;
     padding: 10px;
+}
+main{
+    margin: 20px;
 }
