Refactor templates: items.html and list_products.html
- Add product code to items.html template
- Update title in list_products.html template

--- a/appTp1/templates/appTp1/items.html
+++ b/appTp1/templates/appTp1/items.html
@@ -1,6 +1,7 @@
 {% extends 'appTp1/base.html' %}
 {% block content %}
 <h1>Produit: {{product.name}}</h1>
+<p>Code: {{product.code}}</p> 
 <p>Prix HT: {{product.price_ht}}€</p>
 <p>Prix TTC: {{product.price_ttc}}€</p>
 <p>Date de fabrication: {{product.date_creation}}</p>
