--- a/appTp1/templates/appTp1/list_products.html
+++ b/appTp1/templates/appTp1/list_products.html
@@ -1,4 +1,5 @@
 {% extends 'appTp1/base.html' %}
+{% block title %}Produits{% endblock %}
 {% block content %}
 <h1>Produits</h1>
 <p>Liste des produits ({{ prdcts | length }}):</p>
