Refactor base.html template and urls.py for consistent routing

--- a/appTp1/templates/appTp1/base.html
+++ b/appTp1/templates/appTp1/base.html
@@ -17,7 +17,7 @@
                 <li><a href='/appTp1/home/you'>Hello</a></li>
                 <li><a href='/appTp1/contact'>Contact</a></li>
                 <li><a href='/appTp1/about'>About</a></li>
-                <li><a href='/appTp1/products'>Products</a></li>
+                <li><a href='/appTp1/products/list'>Products</a></li>
             </ul>
         </nav>
         {% endblock %}
