--- a/appTp1/templates/appTp1/list_products.html
+++ b/appTp1/templates/appTp1/list_products.html
@@ -1,8 +1,7 @@
 {% extends 'appTp1/base.html' %}
 {% block title %}Produits{% endblock %}
 {% block content %}
-<h1>Produits</h1>
-<p>Liste des produits ({{ prdcts | length }}):</p>
+<h1>{{ titremenu }} ({{ prdcts | length }})</h1>
 <ul>
     {% for p in prdcts %}
         <li><a href='/appTp1/items/{{p.id}}'>{{p.name}}</a> ({{p.price_ht}}€)</li>
