Refactor templates and URLs for consistent routing

--- a/appTp1/templates/appTp1/base.html
+++ b/appTp1/templates/appTp1/base.html
@@ -18,6 +18,7 @@
                 <li><a href='/appTp1/contact'>Contact</a></li>
                 <li><a href='/appTp1/about'>About</a></li>
                 <li><a href='/appTp1/products/list'>Products</a></li>
+                <li><a href='/appTp1/items/list'>Items</a></li>
             </ul>
         </nav>
         {% endblock %}
