Refactor contact template for consistent routing

--- a/appTp1/templates/appTp1/contact.html
+++ b/appTp1/templates/appTp1/contact.html
@@ -1,6 +1,6 @@
-{% extends 'monapp/base.html' %}
+{% extends 'appTp1/base.html' %}
 
-{% block contenu %}
+{% block content %}
     <h1> {{ titreh1 }} </h1> 
     <p>Nous sommes là pour vous aider.</p>
     <form action="" method="post" novalidate>
