--- a/appTp1/templates/appTp1/contact.html
+++ b/appTp1/templates/appTp1/contact.html
@@ -5,7 +5,7 @@
     <p>Nous sommes là pour vous aider.</p>
     <form action="" method="post" novalidate>
         {% csrf_token %}
-        {{ form }}
+        {{ form.as_p }}
         <button type="submit" class="btn btn-success mt-2">Envoyer</button>
     </form>
 {% endblock %}
