Refactor contact template to use form.as_p for consistent rendering

--- a/appTp1/templates/appTp1/detail_product.html
+++ b/appTp1/templates/appTp1/detail_product.html
@@ -4,6 +4,7 @@
 
 {% block content %}
     <h1>{{ titremenu }}</h1>
+    <p><a href="{% url 'product-update' product.id %}">Modifier</a> - <a href="{% url 'product-delete' product.id %}">Supprimer</a></p>
     <h2>{{ product.name }}</h2>
     <ul>
         <li>Code: {{ product.code }}</li>
