--- a/appTp1/templates/appTp1/list_products.html
+++ b/appTp1/templates/appTp1/list_products.html
@@ -2,6 +2,7 @@
 {% block title %}Produits{% endblock %}
 {% block content %}
 <h1>{{ titremenu }} ({{ prdcts | length }})</h1>
+<p><a href="{% url 'product-add' %}">Créer un nouveau produit</a></p>
 <ul>
     {% if prdcts|length == 0 %}
         <li>Aucun produit</li>
