Refactor contact template to use form.as_p for consistent rendering

--- a/appTp1/templates/appTp1/list_items.html
+++ b/appTp1/templates/appTp1/list_items.html
@@ -1,6 +1,8 @@
 {% extends 'appTp1/base.html' %}
+{% block title %}Déclinaisons{% endblock %}
 {% block content %}
 <h1>{{ titremenu }}</h1>
+<p><a href="{% url 'item-add' %}">Créer une nouvelle déclinaison</a></p>
 <ul>
     {% if declinaisons|length == 0 %}
         <li>Aucune déclinaison</li>
