--- a/appTp1/templates/appTp1/delete_item.html
+++ b/appTp1/templates/appTp1/delete_item.html
@@ -1,10 +1,10 @@
 {% extends 'appTp1/base.html' %}
 
-{% block title %}Delete Product{% endblock %}
+{% block title %}Delete Item{% endblock %}
 
 {% block content %}
-    <h2>{{ product.name }}</h2>
-    <p>Voulez-vous vraiment supprimer ce produit ?</p>
+    <h2>{{ productitem.product.name }} {{ productitem.code }}</h2>
+    <p>Voulez-vous vraiment supprimer cette déclinaison ?</p>
     <form action="" method="post">
         {% csrf_token %}
         <button type="submit" class="btn btn-success mt-2">Supprimer</button>
