Refactor URLs to redirect root path to appTp1/

--- a/appTp1/templates/appTp1/base.html
+++ b/appTp1/templates/appTp1/base.html
@@ -19,6 +19,8 @@
                 <li><a href="{% url 'about' %}">About</a></li>
                 <li><a href="{% url 'products' %}">Products</a></li>
                 <li><a href="{% url 'items' %}">Items</a></li>
+                <li><a href="{% url 'attributes' %}">Attributes</a></li>
+                <li><a href="{% url 'values' %}">Values</a></li>
                 {% if user.is_authenticated %}
                 <li><a href="{% url 'logout' %}">Logout</a></li>
                 {% else %}
