fix les bétises d'hugo

--- a/appTp1/templates/appTp1/base.html
+++ b/appTp1/templates/appTp1/base.html
@@ -20,6 +20,7 @@
                     <a href="{% url 'items' %}"><li>Items</li></a>
                     <a href="{% url 'attributes' %}"><li>Attributes</li></a>
                     <a href="{% url 'values' %}"><li>Values</li></a>
+                    <a href="{% url 'fournisseurs' %}"><li>Fournisseurs</li></a>
                 -->
                 <a href="{% url 'home' %}"><li>Accueil</li></a>
                 <a href="{% url 'contact' %}"><li>Contact</li></a>
