--- a/static/styles.css
+++ b/static/styles.css
@@ -2,6 +2,7 @@ nav{
     background-color: blue;
 }
 nav a{
+    flex-grow: 1;
     color: white;
     text-decoration: none;
 }
@@ -26,4 +27,26 @@ nav li{
 }
 main{
     margin: 20px;
+}
+
+table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+tr:nth-child(odd){
+    background-color: aliceblue;
+}
+
+th{
+    background-color: blue;
+    border: 1px solid blue;
+    color: white;
+    padding: .5rem;
+}
+
+td{
+    cursor: pointer;
+    border: 1px solid black;
+    padding: .5rem;
 }
