--- a/appTp1/templates/appTp1/delete_fournisseur.html
+++ b/appTp1/templates/appTp1/delete_fournisseur.html
@@ -4,7 +4,7 @@
 
 {% block content %}
     <h2>{{ fournisseur.name }}</h2>
-    <p>Voulez-vous vraiment supprimer ce produit ?</p>
+    <p>Voulez-vous vraiment supprimer ce fournisseur ?</p>
     <form action="" method="post">
         {% csrf_token %}
         <button type="submit" class="btn btn-success mt-2">Supprimer</button>
