--- a/appTp1/templates/appTp1/detail_attribute.html
+++ b/appTp1/templates/appTp1/detail_attribute.html
@@ -1,6 +1,8 @@
 {% extends 'appTp1/base.html' %}
 {% block title %}Detail Attribut{% endblock %}
+{% load static %}
 {% block content %}
+    <a href="{% url 'attributes' %}"><img src="{% static 'img/back.png' %}" alt="Retour" style="width: 3rem; height: 3rem;"/></a>
     <h1>{{ titremenu }}</h1>
     <p><a href="{% url 'attribute-update' attribute.id %}">Modifier</a> - <a href="{% url 'attribute-delete' attribute.id %}">Supprimer</a></p>
     <h2>{{ attribute.name }}</h2>
