--- a/appTp1/templates/appTp1/detail_product.html
+++ b/appTp1/templates/appTp1/detail_product.html
@@ -2,7 +2,9 @@
 
 {% block title %}Detail Product{% endblock %}
 
+{% load static %}
 {% block content %}
+    <a href="{% url 'products' %}"><img src="{% static 'img/back.png' %}" alt="Retour" style="width: 3rem; height: 3rem;"/></a>
     <h1>{{ titremenu }}</h1>
     <p><a href="{% url 'product-update' product.id %}">Modifier</a> - <a href="{% url 'product-delete' product.id %}">Supprimer</a></p>
     <h2>{{ product.name }}</h2>
