--- a/appTp1/templates/appTp1/detail_item.html
+++ b/appTp1/templates/appTp1/detail_item.html
@@ -2,8 +2,7 @@
 {% block title %}Detail Item{% endblock %}
 {% load static %}
 {% block content %}
-    <a href="{% url 'items' %}"><img src="{% static 'img/back.png' %}" alt="Retour" style="width: 3rem; height: 3rem;"/></a>
-    <h1>{{ titremenu }}</h1>
+    <h1><a href="{% url 'items' %}"><img src="{% static 'img/back.png' %}" alt="Retour" style="width: 3rem; height: 3rem;"/></a> {{ titremenu }}</h1>
     <p><a href="{% url 'item-update' item.id %}">Modifier</a> - <a href="{% url 'item-delete' item.id %}">Supprimer</a></p>
     <h2><a href="{% url 'product-detail' item.product.id %}">{{ item.product.name }}</a> {{ item.code }}</h2>
     <p>Attributs:</p>
