--- a/appTp1/templates/appTp1/home.html
+++ b/appTp1/templates/appTp1/home.html
@@ -3,10 +3,10 @@
 <h1>{{ titreh1 }}</h1>
 
 <ul>
-    <li><a href="{% url 'home' name='you' %}">Hello</a></li>
-    <li><a href="{% url 'about' %}">About</a></li>
-    <li><a href="{% url 'items' %}">Items</a></li>
-    <li><a href="{% url 'attributes' %}">Attributes</a></li>
-    <li><a href="{% url 'values' %}">Values</a></li>
+    <a href="{% url 'home' name='you' %}"><li>Hello</li></a>
+    <a href="{% url 'about' %}"><li>About</li></a>
+    <a href="{% url 'items' %}"><li>Items</li></a>
+    <a href="{% url 'attributes' %}"><li>Attributes</li></a>
+    <a href="{% url 'values' %}"><li>Values</li></a>
 </ul>
 {% endblock %}
