--- a/appTp1/templates/appTp1/base.html
+++ b/appTp1/templates/appTp1/base.html
@@ -26,7 +26,9 @@
                 <a href="{% url 'products' %}"><li>Produits</li></a>
                 <a href="{% url 'fournisseurs' %}"><li>Fournisseurs</li></a>
                 <a href="{% url 'productsfournisseurs' %}"><li>Produits de Fournisseurs</li></a>
+                {% if user.is_staff %}
                 <a href="{% url 'commandes' %}"><li>Commandes</li></a>
+                {% endif %}
                 {% if user.is_authenticated %}
                 <a href="{% url 'logout' %}"><li>Déconnexion</li></a>
                 {% else %}
